# adaptive_graphRAG

./: QUICK_REFERENCE.md  README.md  WORKFLOW_RETRY_MECHANISM.md  app.py  docker-compose.openwebui.yaml  docker-compose.yaml  langgraph.json  openwebui_pipeline.py  pyproject.toml
data/: QA_17_pest_disease.json  QA_17_pest_disease_document_metadata.json
data/pest_and_disease/: DR-DP-ED-01-แมลงไรศัตรูทุเรียน.pdf_index.json  DR-DP-ED-02-โรคทุเรียนและการป้องกันกำจัด.pdf_index.json  DR-DP-ED-03-โรคของทุเรียน.pdf_index.json  PL-DR-DP-ED-04-เพลี้ยไก่แจ้ทุเรียน.pdf_index.json  PL-DR-DP-ED-05-เพลี้ยจักจั่นฝอยทุเรียน.pdf_index.json  PL-DR-DP-ED-06-เพลี้ยหอย.pdf_index.json  PL-DR-DP-ED-07-ด้วงหนวดยาวเจาะลำต้น.pdf_index.json  PL-DR-DP-ED-08-มอดเจาะลำต้น.pdf_index.json  PL-DR-DP-ED-09-หนอนเจาะเมล็ดทุเรียน.pdf_index.json  PL-DR-DP-THE-01-ความหลากหลายของเชื้อรา Phomopsis spp. สาเหตุโรคทุเรียนและการต้านทานสารเคมีป้องกันกำจัดเชื.pdf_index.json  PL-DR-DP-THE-02-การใช้สารป้องกันกำจัดเชื้อราควบคุมโรครากเน่าโคนเน่าและโรคผลเน่าหลังการเก็บเกี่.pdf_index.json  (+5 more)
docs/: APP_QUICK_START.md  CHAINS_GUIDE.md  CHAINS_REFINEMENTS_SUMMARY.md  CONFIGURATION_GUIDE.md  GRAPHITI_QUICK_REFERENCE.md  GRAPHITI_REFINEMENTS.md  INGESTION_ARCHITECTURE.md  INGESTION_QUICK_START.md  INTERACTIVE_APP_GUIDE.md  OPTIMIZATION_RECOMMENDATIONS.md  QUICK_REFERENCE.md  ROUTING_GUIDE.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_REFINEMENTS.md  workflow_diagram.md
scripts/: evaluate.sh  get_document_metadata.py  start_openwebui.sh  workflow.sh
src/: evaluate.py  logger.py  settings.py
src/api/: __init__.py  main.py  (+1 more)
(+37 files in other folders)
